--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/nprogress": "^0.2.0",
     "axios": "0.21.1",
     "echarts": "^5.4.2",
+    "monaco-editor": "^0.37.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.32",
